Bug css focus on mobile UPDATE

--- a/src/scss/appContainer.sass
+++ b/src/scss/appContainer.sass
@@ -91,3 +91,5 @@
                     &:hover
                         color: $primary-d
                         cursor: pointer
+                    &:focus
+                        color: $white
